Env file configuration, jwt validation route middleware and swagger docs logout and auth bearer token added
